@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-07T16:09:26Z",
-  "count_outdated" : 4873,
-  "uniques_outdated" : 1437,
+  "timestamp" : "2023-08-08T00:41:57Z",
+  "count_outdated" : 4874,
+  "uniques_outdated" : 1438,
   "count" : 4943,
   "uniques" : 1486,
   "clones" : [
-    {
-      "timestamp": "2023-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-25T00:00:00Z",
       "count": 1,
